--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "A cli tool for converting images to ascii art"
 readme = "README.md"
 repository = "https://github.com/emilsharkov/bukvalno"
 license = "MIT"
+license-file = "LICENSE.txt"
 keywords = ["ascii","art","image"]
 
 [dependencies]
